[package]
name = "cloudfront_sign"
version = "0.3.0"
authors = ["Peter Evers <peter@promaton.com>"]
edition = "2018"
description = "Utility module for AWS CloudFront to generate signed URLs and cookies"
homepage = "https://www.promaton.com"
license = "MIT"
keywords = ["aws", "cloudfront", "signed-url", "signed-cookie"]
repository = "https://github.com/promaton/cloudfront-sign-rs"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.21"
rsa = { version = "0.9", features = ["sha1"] }
sha1 = "0.10"
thiserror = "1.0.24"
